gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-native_link_modifiers_as_needed_dg.rs
#[link(name = "foo", kind = "dylib", modifiers = "+as-needed")]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
extern "C" {}

fn main() {}

